--- a/flask_app/templates/testcenter.html
+++ b/flask_app/templates/testcenter.html
@@ -9,6 +9,10 @@
     <body>
         <h1>TEST</h1>
         <p id="demo"></p>
-        <p>{{exampleTitle}}</p>
+        <p>{{listingTitle}}</p>
+        <p>Description: {{listingDescription}}</p>
+        <a href="/testcenter/0" class="headerLink">Iain's house</a>
+        <br>
+        <a href="/testcenter/1" class="headerLink">Sandra's house</a>
     </body>
 </html>
