--- a/flask_app/templates/testcenter.html
+++ b/flask_app/templates/testcenter.html
@@ -11,8 +11,8 @@
         <p id="demo"></p>
         <p>{{listingTitle}}</p>
         <p>Description: {{listingDescription}}</p>
-        <a href="/testcenter/0" class="headerLink">Iain's house</a>
+        <a href="/testcenter/0/0" class="headerLink">Iain's house</a>
         <br>
-        <a href="/testcenter/1" class="headerLink">Sandra's house</a>
+        <a href="/testcenter/1/0" class="headerLink">Sandra's house</a>
     </body>
 </html>
