--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -8,5 +8,26 @@
     </head>
     <body>
         <h1>Login</h1>
+        <form action="/loginPOST" method="POST">
+            <label for="email">Email:</label>
+            <input type="text" name="email">
+            <label for="password">Password:</label>
+            <input type="text" name="password">
+            <input type="submit" value="Login">
+        </form>
+        <h1>New Account</h1>
+        <form action="/new" method="POST">
+            <label for="firstName">First Name:</label>
+            <input type="text" name="first_name">
+            <label for="lastName">Last Name:</label>
+            <input type="text" name="last_name">
+            <label for="Email">Email:</label>
+            <input type="text" name="email">
+            <label for="Password">Password:</label>
+            <input type="password" name="password">
+            <label for="conf">Confirm Password:</label>
+            <input type="password" name="conf">
+            <input type="submit" value="Login">
+        </form>
     </body>
 </html>
