--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -17,13 +17,13 @@
         </form>
         <h1>New Account</h1>
         <form action="/new" method="POST">
-            <label for="firstName">First Name:</label>
+            <label for="first_name">First Name:</label>
             <input type="text" name="first_name">
-            <label for="lastName">Last Name:</label>
+            <label for="last_name">Last Name:</label>
             <input type="text" name="last_name">
-            <label for="Email">Email:</label>
+            <label for="email">Email:</label>
             <input type="text" name="email">
-            <label for="Password">Password:</label>
+            <label for="password">Password:</label>
             <input type="password" name="password">
             <label for="conf">Confirm Password:</label>
             <input type="password" name="conf">
