--- a/flask_app/templates/allListings.html
+++ b/flask_app/templates/allListings.html
@@ -7,7 +7,7 @@
         </script>
     </head>
     <body>
-        <h1>All Listings</h1>
+        <h1>Hello, {{currentUser['firstName']}}</h1>
         <table>
             <tr>
                 <td>Title</td>
