--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -11,23 +11,30 @@
         <form action="/loginPOST" method="POST">
             <label for="email">Email:</label>
             <input type="text" name="email">
+            <br>
             <label for="password">Password:</label>
             <input type="text" name="password">
+            <br><br>
             <input type="submit" value="Login">
         </form>
         <h1>New Account</h1>
         <form action="/new" method="POST">
             <label for="first_name">First Name:</label>
             <input type="text" name="first_name">
+            <br>
             <label for="last_name">Last Name:</label>
             <input type="text" name="last_name">
+            <br>
             <label for="email">Email:</label>
             <input type="text" name="email">
+            <br>
             <label for="password">Password:</label>
             <input type="password" name="password">
+            <br>
             <label for="conf">Confirm Password:</label>
             <input type="password" name="conf">
-            <input type="submit" value="Login">
+            <br><br>
+            <input type="submit" value="Create">
         </form>
     </body>
 </html>
