--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -13,7 +13,7 @@
             <input type="text" name="email">
             <br>
             <label for="password">Password:</label>
-            <input type="text" name="password">
+            <input type="password" name="password">
             <br><br>
             <input type="submit" value="Login">
         </form>
