--- a/flask_app/templates/allListings.html
+++ b/flask_app/templates/allListings.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Hello, {{currentUser['firstName']}}</h1>
-        <table>
+        <table id="listingsTable">
             <tr>
                 <td>Title</td>
                 <td>Listed By</td>
