--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -72,3 +72,39 @@ body {
   font-size: 14pt;
   text-shadow: 0px 0px 8px #779fdb;
 }
+
+/*                                             Listings Table                                             */
+
+#listingsTable {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#listingsTable td, #listingsTable th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#listingsTable tr:nth-child(even){background-color: #f2f2f2;}
+
+#listingsTable tr:hover {background-color: #ddd;}
+
+#listingsTable th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  background-color: #04AA6D;
+  color: white;
+}
+
+.header {
+  display: flex;
+  width: 100%;
+  text-align: center;
+  justify-content: space-evenly;
+}
+
+#newListing {
+  height: 100%;
+}
