--- a/flask_app/templates/newListing.html
+++ b/flask_app/templates/newListing.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>New Listing</h1>
-        <form action="/newListing/{{userID}}" method="POST">
+        <form action="/saveNewListing/{{userID}}" method="POST">
             <label for="title">Title:</label>
             <input type="text" name="title">
             <br>
