--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -15,7 +15,14 @@ html {
   padding: 0;
 }
 
-body {margin-bottom: 60px;}
+body {
+  margin-bottom: 60px;
+  background-image: url('worldmap1.png');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+  background-color: #fdfdfd;
+}
 
 #map {
   height: 100%;
@@ -78,16 +85,26 @@ body {margin-bottom: 60px;}
   font-family: Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   width: 100%;
+  margin-top: 10px;
 }
 
 #listingsTable td, #listingsTable th {
-  border: 1px solid #ddd;
+  /*border: 1px solid #ddd;*/
   padding: 8px;
+}
+
+#listingsTable tr {
+  opacity: 0.97;
 }
 
 #listingsTable tr:nth-child(even){background-color: #f2f2f2;}
 
-#listingsTable tr:hover {background-color: #ddd;}
+#listingsTable tr:nth-child(odd){background-color: #dbdbdb;}
+
+#listingsTable tr:hover {
+  border-bottom: 1px solid #0c885a;
+  color: #0c885a;
+}
 
 #listingsTable th {
   padding-top: 12px;
@@ -124,4 +141,9 @@ body {margin-bottom: 60px;}
 
 #newListing:hover {
   background-color: #0c885a;
+}
+
+#logout {
+  padding: 20px 0px;
+  text-decoration: none;
 }
