--- a/flask_app/templates/newListing.html
+++ b/flask_app/templates/newListing.html
@@ -7,15 +7,16 @@
         </script>
     </head>
     <body>
-        <h1>New Listing</h1>
-        <form action="/saveNewListing/{{userID}}" method="POST">
-            <label for="title">Title:</label>
-            <input type="text" name="title">
-            <br>
-            <label for="description">Description:</label>
-            <input type="text" name="description">
-            <br><br>
-            <input type="submit" value="Publish">
-        </form>
+        <div class="centerBox">
+            <h1>New Listing</h1>
+            <form action="/saveNewListing/{{userID}}" method="POST">
+                <input type="text" name="title" placeholder="Title">
+                <br>
+                <input type="text" name="description" id="descriptionEntry" placeholder="Description">
+                <br><br>
+                <input type="submit" value="Publish">
+            </form>
+            <a href="/allListings/{{userID}}">Back</a>
+        </div>
     </body>
 </html>
