--- a/flask_app/templates/allListings.html
+++ b/flask_app/templates/allListings.html
@@ -35,6 +35,7 @@
                 <h2>{{Listings[i]['title']}}</h2>
                 {%if (allListingsUserList[i] == currentUser['firstName'])%}
                     <h4>Listed by <i style="color:purple">you</i></h4>
+                    <h4><i><a href="/0" style="color:purple; text-decoration: none;">(delete, </a><a href="/1" style="color:purple; text-decoration: none;">edit)</a></i></h4>
                 {% else %}
                     <h4>Listed by {{allListingsUserList[i]}}</h4>
                 {%endif%}
