--- a/flask_app/templates/allListings.html
+++ b/flask_app/templates/allListings.html
@@ -9,7 +9,7 @@
     <body>
         <div class="header">
             <h1 id="helloText">Hello, {{currentUser['firstName']}}</h1>
-            <a href="/newListing/{{currentUser['userID']}}" type="button" id="newListing">New Listing</a>
+            <a href="/newListing/{{currentUser['userID']}}" type="button" class="newListing">New Listing</a>
         </div>
         <a href="/login" id="logout">Logout</a>
         
