--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -7,34 +7,31 @@
         </script>
     </head>
     <body>
-        <h1>Login</h1>
-        <form action="/loginPOST" method="POST">
-            <label for="email">Email:</label>
-            <input type="text" name="email">
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" name="password">
-            <br><br>
-            <input type="submit" value="Login">
-        </form>
-        <h1>New Account</h1>
-        <form action="/new" method="POST">
-            <label for="first_name">First Name:</label>
-            <input type="text" name="first_name">
-            <br>
-            <label for="last_name">Last Name:</label>
-            <input type="text" name="last_name">
-            <br>
-            <label for="email">Email:</label>
-            <input type="text" name="email">
-            <br>
-            <label for="password">Password:</label>
-            <input type="password" name="password">
-            <br>
-            <label for="conf">Confirm Password:</label>
-            <input type="password" name="conf">
-            <br><br>
-            <input type="submit" value="Create">
-        </form>
+        <div class="centerBox">
+            <h1>Login</h1>
+            <form action="/loginPOST" method="POST">
+                <input type="text" name="email" class="inputText" placeholder="Email">
+                <br>
+                <input type="password" name="password" class="inputText" placeholder="Password">
+                <br><br>
+                <input type="submit" value="Login" class="publish">
+            </form>
+        </div>
+        <div class="centerBox2">
+            <h1>New Account</h1>
+            <form action="/new" method="POST">
+                <input type="text" name="first_name" class="inputText" placeholder="First Name">
+                <br>
+                <input type="text" name="last_name" class="inputText" placeholder="Last Name">
+                <br>
+                <input type="text" name="email" class="inputText" placeholder="Email">
+                <br>
+                <input type="password" name="password" class="inputText" placeholder="Password">
+                <br>
+                <input type="password" name="conf" class="inputText" placeholder="Confirm Password">
+                <br><br>
+                <input type="submit" value="Create" class="publish">
+            </form>
+        </div>
     </body>
 </html>
