more edit progress

--- a/flask_app/templates/editListing.html
+++ b/flask_app/templates/editListing.html
@@ -9,7 +9,7 @@
     <body>
         <div class="centerBox">
             <h1>Edit Listing</h1>
-            <form action="/editListing/{{userID}}" method="POST">
+            <form action="/editListingPost/{{userID}}" method="POST">
                 <input type="text" name="title" placeholder="Title">
                 <br>
                 <input type="text" name="description" id="descriptionEntry" placeholder="Description">
