--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -186,7 +186,7 @@ body {
 
 .imageBox {
   width: 100%;
-  
+  border-radius: 3px;
 }
 
 /*                                             New Listing                                             */
