edit listing progress

--- a/flask_app/templates/editListing.html
+++ b/flask_app/templates/editListing.html
@@ -9,12 +9,12 @@
     <body>
         <div class="centerBox">
             <h1>Edit Listing</h1>
-            <form action="/editListingPost/{{userID}}" method="POST">
-                <input type="text" name="title" placeholder="Title">
+            <form action="/editListingPost/{{userID}}/{{listingID}}" method="POST">
+                <input type="text" name="title" placeholder="Title" class="inputText">
                 <br>
-                <input type="text" name="description" id="descriptionEntry" placeholder="Description">
+                <input type="text" name="description" id="descriptionEntry" placeholder="Description" class="inputText">
                 <br><br>
-                <input type="submit" value="Publish">
+                <input type="submit" value="Publish" class="publish">
             </form>
             <a href="/allListings/{{userID}}">Back</a>
         </div>
