--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -170,20 +170,30 @@ body {
 }
 
 .descriptionBody {
-  width: 70%;
+  width: 60%;
   padding: 0px 5%;
   overflow-y: auto;
 }
 
 .photoBox {
-  width: 15%;
+  width: 25%;
   height:inherit;
   padding-right: 15px;
 }
 
 .imageBox {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
   border-radius: 3px;
+  transition-duration: 100ms;
+}
+
+.imageBox:hover{
+  /*translate: -1px -2px;*/
+  box-shadow: 2px 2px 5px 1px #C1C1C1;
+  cursor: pointer;
+  border: 1px dotted #04AA6D;
 }
 
 /*                                             New Listing                                             */
